# calnexus

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  README_EN.md  SKILL.md
.claude/skills/calnexus-dev/: SKILL.md
.githooks/: README.md  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: cache_bench.rs  domain_bench.rs  parser_bench.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  SECURITY.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ast_depth_fuzz.rs  cache_key_fuzz.rs  canonicalizer_fuzz.rs  matrix_dim_fuzz.rs  numeric_boundary_fuzz.rs  parser_fuzz.rs
locales/: en.json  zh.json
scripts/: merge_delta_spec.py
skill/: SKILL.md
specmark/changes/p0-foundation/: design.md  proposal.md  tasks.md
src/: batch.rs  cli.rs  evaluator.rs  i18n.rs  lib.rs  main.rs  repl.rs  symbolic.rs
src/core/: cache.rs  canonicalizer.rs  domain.rs  evaluator.rs  mod.rs  parser.rs  types.rs
src/domains/: arithmetic.rs  combinatorics.rs  complex.rs  factory.rs  matrix.rs  mod.rs  number_theory.rs  numerical.rs  polynomial.rs  precision.rs  scientific.rs  statistics.rs  symbolic.rs  vector.rs
src/output/: canonical.rs  latex.rs  mod.rs  steps.rs
src/server/: cache.rs  evaluate.rs  http.rs  mcp.rs  mod.rs  types.rs
tests/: cli_integration.rs  integration.rs  numerical_linalg_test.rs  performance_tests.rs  property_tests.rs  repl_integration.rs  security_tests.rs  server_http_integration.rs  server_mcp_integration.rs  snapshot_tests.rs
tests/common/: mod.rs
tests/snapshots/: snapshot_tests__snap_001_symbolic_diff_text.snap  snapshot_tests__snap_002_latex_diff.snap  snapshot_tests__snap_003_canonical_3plus2.snap  snapshot_tests__snap_004_parse_error_unbalanced.snap  snapshot_tests__snap_005_json_2plus3.snap  snapshot_tests__snap_006_steps_complex.snap  snapshot_tests__snap_007_latex_matrix.snap  snapshot_tests__snap_008_batch_summary.snap
