[package]
name = "calnexus"
version = "0.1.0"
edition = "2021"
authors = ["Kirky.X"]
license = "MIT"
rust-version = "1.85"
description = "A command-line math expression evaluator with 11 computation domains, symbolic calculus, REPL, and batch processing"
keywords = ["math", "calculator", "symbolic", "repl", "cli"]
categories = ["command-line-utilities", "mathematics", "science"]
repository = "https://github.com/kirky-x/calnexus"
readme = "README.md"

[features]
default = []
# CLI: 命令行界面 + REPL + 批处理
cli = ["dep:clap", "dep:rustyline", "dep:rayon"]
# ICU4X: 国际化错误消息（中英双语）
icu = ["dep:icu"]
# HTTP: HTTP API 接口（基于 sdforge/http）
http = ["dep:sdforge", "sdforge/http"]
# MCP: Model Context Protocol 接口（基于 sdforge/mcp）
mcp = ["dep:sdforge", "sdforge/mcp"]
# FX: 汇率换算（P2 实现）
fx = []
# Numerical: 高级数值计算（eig/SVD 等，P3 实现）
numerical = []
# Server: HTTP + MCP 聚合
server = ["http", "mcp"]

[dependencies]
# 解析器
mathexpr = { version = "0.1", default-features = false }
# 缓存层（仅启用 core，禁用默认的 tokio/moka 全特性）
oxcache = { version = "0.3", features = ["core"], default-features = false }
# 错误派生（仅 std，禁用默认特性）
thiserror = { version = "2", default-features = false }
# 哈希（仅启用 std，禁用默认的 rayon/neon 等并行后端）
blake3 = { version = "1", default-features = false, features = ["std"] }
# 序列化（仅 std + derive，禁用默认的 unstable 特性）
serde = { version = "1", default-features = false, features = ["std", "derive"] }
# tokio 运行时（仅 rt，禁用默认的 full）
tokio = { version = "1", default-features = false, features = ["rt"] }
# 正则表达式（仅 std + unicode-perl，禁用默认的 perf-cache/perf-inline 等）
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
# 数值计算（均禁用默认特性，仅启用 std + serde）
num-complex = { version = "0.4", default-features = false, features = ["std", "serde"] }
nalgebra = { version = "0.35", default-features = false, features = ["std"] }
num-bigint = { version = "0.4", default-features = false, features = ["std", "serde"] }
num-rational = { version = "0.4", default-features = false, features = ["std", "serde", "num-bigint"] }
num-integer = { version = "0.1", default-features = false, features = ["std"] }
num-traits = { version = "0.2", default-features = false, features = ["std"] }
# CLI 依赖（仅启用必要特性，禁用默认的 color/env 等）
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "suggestions"], optional = true }
rustyline = { version = "18", default-features = false, features = ["derive"], optional = true }
rayon = { version = "1", default-features = false, optional = true }
# ICU4X 国际化（仅 compiled_data，禁用默认特性）
icu = { version = "2", default-features = false, features = ["compiled_data"], optional = true }
# sdforge: HTTP/MCP 接口封装层（禁用默认特性，按需启用 http/mcp）
sdforge = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
assert_cmd = { version = "2", default-features = false }
predicates = { version = "3", default-features = false }
tempfile = { version = "3", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }
insta = { version = "1", default-features = false }
criterion = { version = "0.8", default-features = false, features = ["plotters"] }
expectrl = { version = "0.9", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[package.metadata.tarpaulin]
fail-under = 95
exclude-files = ["src/main.rs"]

[[bench]]
name = "parser_bench"
harness = false
required-features = ["cli"]

[[bench]]
name = "cache_bench"
harness = false
required-features = ["cli"]

[[bench]]
name = "domain_bench"
harness = false
required-features = ["cli"]

[[test]]
name = "cli_integration"
required-features = ["cli"]

[[test]]
name = "repl_integration"
required-features = ["cli"]

[[test]]
name = "property_tests"
required-features = ["cli"]

[[test]]
name = "security_tests"
required-features = ["cli"]

[[test]]
name = "snapshot_tests"
required-features = ["cli"]

[[test]]
name = "performance_tests"
required-features = ["cli"]

[[test]]
name = "integration"
required-features = ["cli"]
